--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.14"
+    "react-hook-form": "^7.54.2",
+    "styled-components": "^6.1.14",
+    "swr": "^2.3.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
